@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 11:17:40 nia Exp $
-
-BLAKE2s (pyDes-2.0.1.tar.gz) = 355d50da6049dcc30a091a2b3508025dd6d36f767e1cd2b7966e219dc8fd5902
-SHA512 (pyDes-2.0.1.tar.gz) = b0754f89061e980d770dbe0aa206787189a60fb0daa5e4cd10a3fbd234fe4e479e1cfa1e95d1478ebddc3b1e0ac7be06d29c882a82f19a7d2962ddb456399e92
-Size (pyDes-2.0.1.tar.gz) = 11039 bytes
