@@ -1,4 +1,4 @@
-$NetBSD: CHANGES-2022,v 1.314 2022/01/19 14:05:05 pin Exp $
+$NetBSD: CHANGES-2022,v 1.315 2022/01/19 18:00:28 wiz Exp $
 
 Changes to the packages collection and infrastructure in 2022:
 
@@ -448,3 +448,4 @@ Changes to the packages collection and infrastructure in 2022:
 	Updated devel/py-setuptools_scm to 6.4.2 [adam 2022-01-19]
 	Updated net/rabbitmq to 3.9.13 [adam 2022-01-19]
 	Updated audio/ncspot to 0.9.5 [pin 2022-01-19]
+	Removed security/py-Des [wiz 2022-01-19]
